[gd_scene load_steps=6 format=3 uid="uid://b0nmdbhojym5q"]

[ext_resource type="Script" uid="uid://3q8r07cvxqjo" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://drshkg0gc15cb" path="res://health_gui.tscn" id="1_ig7tw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0xm2m"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_h2yge"]
sky_material = SubResource("ProceduralSkyMaterial_0xm2m")

[sub_resource type="Environment" id="Environment_1bvp3"]
background_mode = 2
sky = SubResource("Sky_h2yge")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1bvp3")

[node name="HealthGUI" parent="." instance=ExtResource("1_ig7tw")]

[node name="LimbSelector" type="OptionButton" parent="."]
offset_left = 143.0
offset_top = 10.0
offset_right = 284.0
offset_bottom = 41.0

[node name="InjurySelector" type="OptionButton" parent="."]
offset_left = 388.0
offset_top = 10.0
offset_right = 529.0
offset_bottom = 41.0

[node name="Apply" type="Button" parent="."]
offset_left = 312.0
offset_top = 76.0
offset_right = 364.0
offset_bottom = 107.0
text = "Apply"

[node name="DamageAmount" type="LineEdit" parent="."]
offset_left = 556.0
offset_top = 10.0
offset_right = 831.0
offset_bottom = 41.0
placeholder_text = "Inflict damage"
clear_button_enabled = true

[node name="Apply2" type="Button" parent="."]
offset_left = 657.0
offset_top = 63.0
offset_right = 709.0
offset_bottom = 94.0
text = "Apply"

[node name="DamageAmount2" type="LineEdit" parent="."]
offset_left = 840.0
offset_top = 10.0
offset_right = 1115.0
offset_bottom = 41.0
placeholder_text = "Heal damage"
clear_button_enabled = true

[node name="Apply3" type="Button" parent="."]
offset_left = 941.0
offset_top = 63.0
offset_right = 993.0
offset_bottom = 94.0
text = "Apply"

[node name="ItemSelector" type="OptionButton" parent="."]
offset_left = 461.0
offset_top = 145.0
offset_right = 602.0
offset_bottom = 176.0

[node name="Apply4" type="Button" parent="."]
offset_left = 505.0
offset_top = 191.0
offset_right = 557.0
offset_bottom = 222.0
text = "Apply"

[node name="ConditionText" type="Label" parent="."]
offset_left = 699.0
offset_top = 235.0
offset_right = 1444.0
offset_bottom = 412.0
autowrap_mode = 3

[node name="GetCondition" type="Button" parent="."]
offset_left = 740.0
offset_top = 578.0
offset_right = 915.0
offset_bottom = 609.0
text = "Get current condition"

[node name="StatusLog" type="RichTextLabel" parent="."]
offset_left = 44.0
offset_top = 324.0
offset_right = 535.0
offset_bottom = 638.0
bbcode_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]

[connection signal="pressed" from="Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Apply2" to="." method="_on_apply_2_pressed"]
[connection signal="pressed" from="Apply3" to="." method="_on_apply_3_pressed"]
[connection signal="pressed" from="Apply4" to="." method="_on_apply_4_pressed"]
[connection signal="pressed" from="GetCondition" to="." method="_on_get_condition_pressed"]
